feat: Add AI chat counseling feature with Firestore integration

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
-    "start": "nuxt start"
+    "start": "nuxt start",
+    "deploy": "npm run build && firebase deploy --only hosting,functions"
   },
   "dependencies": {
     "@pinia/nuxt": "0.11.2",
