--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ yarn-error.log*
 .firebase
 firebase-debug.log
 firebase-debug.*.log
+serviceAccountKey.json
 
 # Firebase Functions
 functions/node_modules
