--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/node": "20.12.0",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.0",
     "postcss": "^8.5.6",
     "typescript": "5.6.3"
   }
