--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vee-validate/yup": "^4.12.6",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.5.0",
+     "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "nuxt": "^4.1.2",
     "pinia": "3.0.3",
     "tailwindcss": "^3.4.0",
